Overflow fix

--- a/css/grids.css
+++ b/css/grids.css
@@ -7,6 +7,7 @@ main {
 	position: relative;
 	height: 100%;
 	margin: 5px;
+	overflow-y: auto;
 	box-sizing: border-box;
 }
 
